with audio conversion

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <body>
         
         <h1 class="heading">
-            Baixa vídeo do youtube sem ad, viva o comunismo!!!
+            Baixa vídeos do youtube
         </h1>
 
         <input class="URL-input" placeholder="URL do vídeo aqui">
         
-        <button class="convert-button"> Converta </button>
+        <button class="convert-button"> Converta vídeo </button>
+        <button class="sound-button"> Converta áudio </button>
 
         <script src='script.js'></script>
 
