--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         
         <h1 class="heading">
-            Baixa vídeos do youtube
+            Download de vídeo/áudio do youtube
         </h1>
 
         <input class="URL-input" placeholder="URL do vídeo aqui">
         
-        <button class="convert-button"> Converta vídeo </button>
-        <button class="sound-button"> Converta áudio </button>
+        <button class="convert-button"> Baixar vídeo </button>
+        <button class="sound-button"> Baixar áudio </button>
 
         <script src='script.js'></script>
 
